Fixed /start. If used after game start, it would set hasRolled to true and the game would become stuck Fixed? the print of moveList. Multiple full run tests with no errors now Changed opacity of the gameInfo so user can see moves going on behind it when in full view. Also changed format of some lines in board.fxml so a user can read without having to scroll sideways too much

--- a/src/Backgammon/application.css
+++ b/src/Backgammon/application.css
@@ -11,7 +11,7 @@
 }
 
 #displayArea {
-    -fx-opacity: .65;
+    -fx-opacity: .4;
     -fx-border-color: transparent;
     -fx-text-fill: black;
     -fx-font-size: 15;
